[workspace]
members = [
    "bin/seal-worker",
    "bin/storage-miner",
    "bin/seal-seed",
    "core/api",
    "core/async-tools",
    "core/events",
    "core/sectorbuilder",
    "core/state_machine",
    "core/miner",
    "core/gen",
    "node/config",
    "node/repo",
    "node/utils",
    "node/service",
    "node/paramfetch",
    "common/utils",
]

[replace]
"cid:0.4.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-serde" }
"serde_cbor:0.11.1" = {  git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack" }
