[workspace]
members = [
    "bin/seal-worker",
    "bin/storage-miner",
    "bin/seal-seed",
    "core/async-tools",
    "core/events",
    "core/sector-storage",
    "core/sector-storage/stores",
    "core/sectorbuilder",
    "core/state_machine",
    "core/miner",
    "core/gen",
    "node/config",
    "node/repo",
    "node/utils",
    "node/service",
    "node/paramfetch",
    "common/utils",
]

[replace]
"cid:0.5.0" = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" }
