[package]
name = "rust-api"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
types = { package = "types", git = "https://github.com/PolkaX/plum" }
ipld-cbor = { package = "rust-ipld-cbor", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master", features = ["bigint"] }
