[package]
name = "config"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

sectorbuilder = { package = "rust-sectorbuilder", path = "../../core/sectorbuilder" }

node-utils = { path = "../utils" }