[package]
name = "utils"
version = "0.1.0"
authors = ["PolkaX <github.com/polkax>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.13"
ansi_term = "0.12.1"
time = "0.1.42"
log = "0.4"
regex = "1.3.1"
env_logger = "0.7.0"
lazy_static = "1.4.0"
