[package]
name = "api"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
anyhow = "1.0"

# plum
plum_address = { path = "../../../vendor/plum/primitives/address" }
plum_bigint = { path = "../../../vendor/plum/primitives/bigint" }
plum_block = { path = "../../../vendor/plum/primitives/block" }
plum_message = { path = "../../../vendor/plum/primitives/message" }
plum_ticket = { path = "../../../vendor/plum/primitives/ticket" }
plum_tipset = { path = "../../../vendor/plum/primitives/tipset" }
