[package]
name = "api"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5", features = ["attributes"] }
async-trait = "0.1"
base64 = "0.12"
cid = { version = "0.4", features = ["impl-serde"] }
libp2p-core = "0.17"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
jsonrpsee = { git = "https://github.com/PolkaX/jsonrpsee", branch = "auth", default-features = false, features = ["http", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# plum
plum_address = { path = "../../../vendor/plum/primitives/address" }
plum_bigint = { path = "../../../vendor/plum/primitives/bigint" }
plum_block = { path = "../../../vendor/plum/primitives/block" }
plum_crypto = { path = "../../../vendor/plum/crypto" }
plum_message = { path = "../../../vendor/plum/primitives/message" }
plum_ticket = { path = "../../../vendor/plum/primitives/ticket" }
plum_tipset = { path = "../../../vendor/plum/primitives/tipset" }
plum_types = { path = "../../../vendor/plum/primitives/types" }
plum_wallet = { path = "../../../vendor/plum/wallet" }
