[package]
name = "api"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.12"
cid = { version = "0.5", features = ["impl-serde"] }
libp2p-core = "0.17"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
jsonrpc-client = { path = "jsonrpc-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "time"] }

# plum
plum_address = { path = "../../../vendor/plum/primitives/address" }
plum_bigint = { path = "../../../vendor/plum/primitives/bigint" }
plum_block = { path = "../../../vendor/plum/primitives/block" }
plum_crypto = { path = "../../../vendor/plum/crypto" }
plum_message = { path = "../../../vendor/plum/primitives/message" }
plum_tipset = { path = "../../../vendor/plum/primitives/tipset" }
plum_types = { path = "../../../vendor/plum/primitives/types" }
plum_vm = { path = "../../../vendor/plum/vm" }
plum_wallet = { path = "../../../vendor/plum/wallet" }
