[package]
name = "miner"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
chrono = "0.4"
cid = { version = "0.4", features = ["impl-serde"] }
log = "0.4"
lru = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11", features = ["tags"] }
thiserror = "1.0"

# ipfs
block_format = { package = "rust-block-format", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
# plum
types = { path = "../../../vendor/plum/chain/types" }
plum_bigint = { path = "../../../vendor/plum/primitives/bigint" }

# core
api = { package = "rust-api", path = "../api" }
gen = { package = "gen", path = "../gen" }
