[package]
name = "miner"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
chrono = "0.4"
cid = { version = "0.5" , features = ["cbor", "json"] }
log = "0.4"
lru = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# ipfs
block-format = { git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }

# plum
plum_api_client = { path = "../../../vendor/plum/api-client" }
plum_address = { path = "../../../vendor/plum/primitives/address" }
plum_bigint = { path = "../../../vendor/plum/primitives/bigint" }
plum_block = { path = "../../../vendor/plum/primitives/block" }
plum_crypto = { path = "../../../vendor/plum/primitives/crypto" }
plum_message = { path = "../../../vendor/plum/primitives/message" }
plum_tipset = { path = "../../../vendor/plum/primitives/tipset" }

# core
gen = { path = "../gen" }
