[package]
name = "sectorbuilder"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
anyhow = "1.0.23"
cid = { version = "0.4", features = ["impl-serde"] }
libc = "0.2"
paired = "0.18.0"
rand = "0.7"
rand_xorshift = "0.2"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
thiserror = "1.0"

# filecoin proof
filecoin-proofs-api = { git = "https://github.com/filecoin-project/rust-filecoin-proofs-api", branch = "master" }

# ipfs
datastore = { package = "rust-datastore", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }

# plum
plum_address = { path = "../../../vendor/plum/primitives/address" }
plum_actor = { path = "../../../vendor/plum/chain/actor" }
