[package]
name = "node-config"
version = "0.1.0"
authors = ["Aten <jincxmain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"

plum_address = { path = "../../../vendor/plum/chain/address" }

sectorbuilder = { package = "rust-sectorbuilder", path = "../../core/sectorbuilder" }

node-utils = { path = "../utils" }

[dev-dependencies]
serial_test = "0.4"