[package]
name = "node-config"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# plum
plum_address = { path = "../../../vendor/plum/primitives/address" }
# core
sectorbuilder = { package = "rust-sectorbuilder", path = "../../core/sectorbuilder" }
# node
node-utils = { path = "../utils" }

[dev-dependencies]
serial_test = "0.4"
