[package]
name = "node-paramfetch"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
blake2-rfc = { package = "blake2-rfc", version = "0.2.18" }
reqwest = { version = "0.10.0", features = ["blocking", "json"]}
hex = "0.4.0"