[package]
name = "repo"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
log = "0.4"
serde_json = "1.0"

# ipfs
fs-lock = { package = "rust-fs-lock", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
datastore = { package = "rust-datastore", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
ds-rocksdb = { package = "rust-ds-rocksdb", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
# plum
plum_libp2p = { path = "../../../vendor/plum/libp2p" }
types = { path = "../../../vendor/plum/chain/types" }
# node
config = { package = "node-config", path = "../config" }
node-utils = { path = "../utils" }
