[package]
name = "repo"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
log = "0.4"
parity-multiaddr = "0.8"
serde_json = "1.0"

# ipfs
fs-lock = { git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
datastore = { git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
ds-rocksdb = { git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }

# plum
plum_wallet = { path = "../../../vendor/plum/wallet" }

# node
config = { package = "node-config", path = "../config" }
node-utils = { path = "../utils" }
