[package]
name = "stores"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
log = "0.4"
uuid = "0.8"
bitmask = "0.5"
url = "2.1"
thiserror = "1.0"
regex = "1.3"
lazy_static = "1.4"

plum_actor = { path = "../../../../vendor/plum/chain/actor" }
plum_types = { path = "../../../../vendor/plum/primitives/types" }
plum_bigint = { path = "../../../../vendor/plum/primitives/bigint" }