[package]
name = "stores"
version = "0.1.0"
authors = ["PolkaX <https://github.com/PolkaX>"]
edition = "2018"

[dependencies]
log = "0.4"
nix = "0.17"
uuid = "0.8"
bitmask = "0.5"
url = "2.1"
thiserror = "1.0"
regex = "1.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

plum_bigint = { path = "../../../../vendor/plum/primitives/bigint" }
plum_sector = { path = "../../../../vendor/plum/primitives/sector" }
plum_types = { path = "../../../../vendor/plum/primitives/types" }